let's try running the tests inside the container

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,5 @@ install:
 
 script:
   - singularity run -B data/input:/data/input -B $TRAVIS_BUILD_DIR/analysis:/code --pwd /code container.ftw
-  - python -m unittest discover -s $TRAVIS_BUILD_DIR/analysis/tests/ -p '[t|T]est*.py'
+  - singularity exec -B data/input:/data/input -B $TRAVIS_BUILD_DIR/analysis:/code --pwd /code container.ftw python -m unittest discover -s /code/tests/ -p '[t|T]est*.py'
 
